--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,5 +1,4 @@
 /* Variables and mixins declared here will be available in all other SCSS files */
-@import 'scss/reset';
 @import 'scss/functions';
 @import 'scss/mixins';
 
@@ -11,3 +10,5 @@ $desktop-sm: 1366;
 $desktop-xs: 1280;
 $desktop: 1024;
 $tablet: 1024;
+
+$font-firaSans: 'Fira Sans', Arial, sans-serif;
