--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,6 +1,115 @@
 /* Variables and mixins declared here will be available in all other SCSS files */
-@import 'scss/functions';
-@import 'scss/mixins';
+@use 'sass:math';
+
+// Responsible
+@function vw($value, $base: $desktop-md) {
+	@return math.div($value, $base) * 100vw;
+}
+
+@function vm($value, $base: 375) {
+	@return math.div($value, $base) * 100vmin;
+}
+
+@function vc($value) {
+	@return calc(#{$value} * var(--width-multiplier));
+}
+
+// breakpoint
+@mixin desktop-xxl {
+	@media (max-width: ($desktop-xxl - 1px)) {
+		@content;
+	}
+}
+
+@mixin desktop-xl {
+	@media (max-width: ($desktop-xl - 1px)) {
+		@content;
+	}
+}
+
+@mixin desktop-lg {
+	@media (max-width: ($desktop-lg - 1px)) {
+		@content;
+	}
+}
+
+@mixin desktop-md {
+	@media (max-width: ($desktop-md - 1px)) {
+		@content;
+	}
+}
+
+@mixin desktop-sm {
+	@media (max-width: ($desktop-sm - 1px)) {
+		@content;
+	}
+}
+
+@mixin desktop-xs {
+	@media (max-width: ($desktop-xs - 1px)) {
+		@content;
+	}
+}
+
+@mixin desktop {
+	@media (min-width: ($desktop + 1px)) {
+		@content;
+	}
+}
+
+@mixin devices {
+	@media (max-width: ($desktop * 1px)) {
+		@content;
+	}
+}
+
+@mixin mobile {
+	@media (max-width: ($tablet - 1px)) {
+		@content;
+	}
+}
+
+@mixin font-face($font-name, $font-weight: 400, $font-style: normal) {
+	$path: 'fonts/';
+
+	$font-weights: (
+		100: 'Thin',
+		200: 'ExtraLight',
+		300: 'Light',
+		400: 'Regular',
+		500: 'Medium',
+		600: 'SemiBold',
+		700: 'Bold',
+		800: 'ExtraBold',
+		900: 'Black',
+	);
+
+	$font-type: map-get($font-weights, $font-weight) + if($font-style == italic, 'Italic', '');
+
+	@font-face {
+		src: url('#{$path}#{$font-name}/#{$font-name}-#{$font-type}.woff2') format('woff2'),
+		url('#{$path}#{$font-name}/#{$font-name}-#{$font-type}.woff') format('woff');
+		font-family: $font-name;
+		font-weight: $font-weight;
+		font-style: $font-style;
+		font-display: swap;
+	}
+}
+
+
+
+@include font-face("FiraSans", 100);
+@include font-face("FiraSans", 200);
+@include font-face("FiraSans", 300);
+@include font-face("FiraSans", 400);
+@include font-face("FiraSans", 500);
+@include font-face("FiraSans", 600);
+@include font-face("FiraSans", 700);
+@include font-face("FiraSans", 800);
+@include font-face("FiraSans", 900);
+
+
+
 
 $desktop-xxl: 2560;
 $desktop-xl: 1920;
